# ChangeLog for app-emulation/wine
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.158 2006/10/13 21:12:43 vapier Exp $

*wine-0.9.23 (13 Oct 2006)

  13 Oct 2006; Mike Frysinger <vapier@gentoo.org> +wine-0.9.23.ebuild:
  Version bump.

*wine-0.9.22 (28 Sep 2006)

  28 Sep 2006; Mike Frysinger <vapier@gentoo.org> +wine-0.9.22.ebuild:
  Version bump.

  14 Sep 2006; Mike Frysinger <vapier@gentoo.org> wine-0.9.19.ebuild,
  wine-0.9.20.ebuild, wine-0.9.21.ebuild:
  Punt dga stuff as upstream has cut it #147497 by Sascha Geschwandtner.

*wine-0.9.21 (14 Sep 2006)

  14 Sep 2006; Mike Frysinger <vapier@gentoo.org> +wine-0.9.21.ebuild:
  Version bump #147503 by Markus Giese.

  06 Sep 2006; Zac Medico <zmedico@gentoo.org> wine-0.9.9.ebuild,
  wine-0.9.10.ebuild, wine-0.9.11.ebuild, wine-0.9.12.ebuild,
  wine-0.9.13.ebuild, wine-0.9.14.ebuild, wine-0.9.15.ebuild,
  wine-0.9.16.ebuild, wine-0.9.17.ebuild, wine-0.9.18.ebuild,
  wine-0.9.19.ebuild:
  Revert stable keywords for bug #146514.

*wine-0.9.20 (24 Aug 2006)

  24 Aug 2006; Mike Frysinger <vapier@gentoo.org> +wine-0.9.20.ebuild:
  Version bump.

*wine-0.9.19 (11 Aug 2006)

  11 Aug 2006; Mike Frysinger <vapier@gentoo.org> +wine-0.9.19.ebuild:
  Version bump #143492 by Sterling Christensen.

  30 Jul 2006; Mike Frysinger <vapier@gentoo.org> wine-0.9.18.ebuild,
  wine-9999.ebuild:
  Add support for USE=hal/dbus #141532 by Niels van Aert.

*wine-0.9.18 (30 Jul 2006)

  30 Jul 2006; Mike Frysinger <vapier@gentoo.org> +wine-0.9.18.ebuild:
  Version bump #141901 by David Watzke.

*wine-0.9.17 (12 Jul 2006)

  12 Jul 2006; Mike Frysinger <vapier@gentoo.org> +wine-0.9.17.ebuild:
  Version bump #140005 by Markus Giese.

  27 Jun 2006; Mike Frysinger <vapier@gentoo.org> wine-0.9.16.ebuild:
  Force truetype support since users dont know what a fontless wine actually
  means (it's useless) #137788.

*wine-0.9.16 (27 Jun 2006)
