@@ -1,0 +1,3 @@
+MD5 d779b71ec1fcfbd1ed3860453762d4be wine-0.9.24.tar.bz2 11258286
+RMD160 4fe83188dd8ec0d8a10f8f248b3121cedbe4ba59 wine-0.9.24.tar.bz2 11258286
+SHA256 840ed63b7886cac5bbfc4a0d25a3a68b43c9194ae9eb0e7636a50ba324e77209 wine-0.9.24.tar.bz2 11258286
