@@ -1,6 +1,11 @@
 # ChangeLog for app-emulation/wine
 # Copyright 1999-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.158 2006/10/13 21:12:43 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emulation/wine/ChangeLog,v 1.159 2006/10/28 23:44:17 vapier Exp $
+
+*wine-0.9.24 (28 Oct 2006)
+
+  28 Oct 2006; Mike Frysinger <vapier@gentoo.org> +wine-0.9.24.ebuild:
+  Version bump.
 
 *wine-0.9.23 (13 Oct 2006)
 
